tests/miniJava/neg/002778_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = public new java ( ) ; } }
